--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,11 +14,11 @@
         {{ text }}<br/>
     </div>
     <div>
-        <img src = "{% static "images/rango.jpg" %}"
+        <img src="/static/images/rango.jpg"
              alt = "Picture of rango">
     </div>
     <div>
-        <img src="{{ MEDIA_URL }}cat.jpg"
+        <img src="{{ MEDIA_URL }}cat.jpeg"
              alt="Picture of a Cat"/>
     </div>
 </head>
