--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,8 +11,38 @@
     <strong>{{ boldmessage }}</strong><br/>
 </div>
 
+<h2>Most Liked Categories</h2>
+
+<div>
+    {% if categories %}
+    <ul>
+        {% for category in categories %}
+        <li>
+            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+{% else %}
+<strong>
+    There are no categories present.
+</strong>
+{% endif %}
+<h2>Most Viewed Pages</h2>
+</div>
+{% if pages %}
+<ul>
+    {% for page in pages %}
+    <li>
+        <a href="/rango/page/{{ page.slug }}/">{{ page.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
+{% else %}
+<strong>There are no pages present.</strong>
+{% endif %}
 <div>
     <a href="/rango/about/">About</a><br/>
+    <a href="/rango/add_category/">Add a New Category</a><br/>
     <img src="/static/images/rango.jpg "
     alt = "Picture of Rango"/>
 </div>
