--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load static %}
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<head>
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
     <h1>
         Rango says...
     </h1>
@@ -21,8 +23,5 @@
         <img src="{{ MEDIA_URL }}cat.jpeg"
              alt="Picture of a Cat"/>
     </div>
-</head>
-<body>
-
-</body>
+{% endblock %}
 </html>
