--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+    Add a Category
+{% endblock %}
+{% block body_block %}
 <h1>Add a Category</h1>
 <div>
-    <form id = 'category_form' method="post" action="/rango/add_category/" >
+    <form id = 'category_form' method="POST" action="{% url 'rango:add_category' %}" >
         {% csrf_token %}
         {% for hideen in form.hidden_fields %}
         {{ hideen }}
         {% endfor %}
     {% for field in form.visible_fields %}
-    {{ field.errors }}
-    {{ field.help_text }}
-    {{ field }}
+        {{ field.errors }}
+        {{ field.help_text }}
+        {{ field }}
     {% endfor %}
     <input type="submit" name="submit" value="Create Category"/>
     </form>
 </div>
-</body>
+{% endblock %}
 </html>
