--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+{% block title_block%}
+    Add a Page
+{% endblock %}
+{% block body_block %}
+{% if category %}
+<h1>Add a New Page to {{ category.name }}</h1>
+<div>
+    <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}
+            <input type="submit" name="submit" value="Add Page" />
+        </form>
+    </div>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+</div>
+
+{% endblock %}
 </html>
