--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
 <html>
-    <head>
-        <title>Rango</title>
-    </head>
+     {% block title_block %}
+       Add a Category
+     {% endblock %}
 
-    <body>
-        <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
+        {% block body_block %}
+            {% if category %}
+                <h1>{{ category.name }}</h1>
+            {% else %}
+                Unknow Category
+            {% endif %}
+
+            {% if category %}
+                <h1>{{ category.name }}</h1>
             {% if pages %}
              <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-             {% endfor %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
             </ul>
             {% else %}
-            <strong>No pages currently in category.</strong>
+                <strong>No pages currently in category.</strong>
             {% endif %}
+    <p>
+        <a href="/rango">Back to the Category</a>
+    </p>
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br/>
         {% else %}
-            The specified category does not exist.
+        <strong>The specified category does not exist.</strong>
         {% endif %}
-        </div>
-    <a href="/rango">Back to the Category</a>
+     {% endblock %}
+    </p>
     </body>
 </html>
