--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
 {% load static %}
 <html>
-<head>
-    <title>Rango</title>
-    <body>
+{% block title_block %}
+Homepage
+{% endblock %}
+
+{% block body_block %}
 <h1>Rango says...</h1>
 <div>
     hey there partner!<br/>
@@ -18,7 +21,7 @@
     <ul>
         {% for category in categories %}
         <li>
-            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+            <a href="{% url 'rango:show_category' category.slug%}">{{ category.name }}</a>
         </li>
         {% endfor %}
     </ul>
@@ -33,18 +36,15 @@
 <ul>
     {% for page in pages %}
     <li>
-        <a href="/rango/page/{{ page.slug }}/">{{ page.title }}</a>
+        <a href="{{ page.url }}">{{ page.title }}</a>
     </li>
     {% endfor %}
 </ul>
 {% else %}
 <strong>There are no pages present.</strong>
 {% endif %}
-<div>
-    <a href="/rango/about/">About</a><br/>
-    <a href="/rango/add_category/">Add a New Category</a><br/>
     <img src="/static/images/rango.jpg "
     alt = "Picture of Rango"/>
-</div>
-</body>
+{% endblock %}
+
 </html>
