--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
+{% load rango_template_tags %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +14,11 @@
 <body>
 <div>
     {% block body_block %}
+    {% endblock %}
+</div>
+<div>
+    {% block sidebar_block %}
+        {% get_category_list category%}
     {% endblock %}
 </div>
 <hr/>
