--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
 {% load static %}
 {% load rango_template_tags %}
 
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Rango -
     {% block title_block %}
     How to Tango with Django!
@@ -24,11 +21,17 @@
 <hr/>
 <div>
     <ul>
-        <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'rango:restricted' %}">Restricted Page</a> </li>
+            <li><a href="{% url 'rango:logout' %}">Logout</a> </li>
+            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        {% else %}
+            <li><a href="{% url 'rango:register' %}">Sign Up</a> </li>
+            <li><a href="{% url 'rango:login' %}">Login</a> </li>
+        {% endif %}
+
         <li><a href="{% url 'rango:about' %}">About</a> </li>
         <li><a href="{% url 'rango:index' %}">Index</a> </li>
     </ul>
 </div>
-
 </body>
-</html>
