--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
 {% extends 'rango/base.html' %}
 {% load static %}
-<html>
+
 {% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
     {% else %}
         Unknow Category
     {% endif %}
+
     {% if pages %}
         <ul>
             {% for page in pages %}
@@ -19,9 +19,7 @@
     {% endif %}
     <p>
         <a href="/rango">Back to the Category</a>
-    </p>
-        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br/>
-     {% endblock %}
-    </p>
-    </body>
-</html>
+    {% if user.is_authenticated  %}
+        <p><a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br/></p>
+    {% endif %}
+{% endblock %}
