--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
 {% extends 'rango/base.html' %}
 {% load static %}
-<html>
+
 {% block title_block %}
 Homepage
 {% endblock %}
 
 {% block body_block %}
 <h1>Rango says...</h1>
+    {% if user.is_authenticated %}
+    howdy {{ user.username }}!
+  {% else %}
+    hey there partner!
+  {% endif %}
 <div>
     hey there partner!<br/>
     <strong>{{ boldmessage }}</strong><br/>
@@ -45,5 +49,3 @@ Homepage
     <img src="/static/images/rango.jpg "
     alt = "Picture of Rango"/>
 {% endblock %}
-
-</html>
